Adjust footer grid for landscape.

--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -6,14 +6,14 @@
 
         <div class="footer-content">
             <div class="row footer-row mt-0 ">
-                <div class="col-12 col-md-4 footer-col">
+                <div class="col-12 col-sm-4 footer-col">
                     <h6 class="d-block"><i class="fas fa-at"></i>Contact</h6>
                     <p class="d-inline d-md-block">E-Mail: carrie.poell@gmail.com</p>
                 </div>
 
                 <!--- Github link & logo -->
 
-                <div class="col-12 col-md-4 mb-1 footer-col">
+                <div class="col-12 col-sm-4 mb-1 footer-col">
                     <h6 class="d-block">Github</h6>
                     <a href="https://github.com/synnea" target="_blank"><i class="fab fa-github github-logo hvr-bounce-in"></i></a>
                 </div>
