Debugging: index.html in landscape view.

--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -21,7 +21,7 @@
                 <!--- Link to data source from Kaggle -->
 
 
-                <div class="col-4 d-none d-sm-block footer-col">
+                <div class="col-4 d-none d-md-block footer-col">
                     <div>For educational purposes only.</div>
                 </div>
             </div>
