--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -95,14 +95,14 @@
                     <div class="card-deck">
 
                         <div class="row justify-content-center">
-                            <div class="col-12 col-md-6 d-none d-md-block">
+                            <div class="col-12 col-sm-6 d-none d-sm-block">
                                 {% include 'components/profile_card.html' %}
                             </div>
 
                             {% endif %}
 
                             {% if loop.index % 2 == 0 %}
-                            <div class="col-12 col-md-6">
+                            <div class="col-12 col-sm-6">
                                 {% include 'components/profile_card.html' %}
                             </div>
                         </div>
