Tweak footer size for landscape view.

--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -152,7 +152,7 @@ footer {
     text-align: center !important;
 
     @media screen and (orientation: landscape) {
-        font-size: 0.6em;
+        margin: 0;
     }
 
     @media (min-width: $bp-mobile) {
