--- a/static/css/main.css
+++ b/static/css/main.css
@@ -138,7 +138,7 @@ footer {
 
 @media screen and (orientation: landscape) {
   footer {
-    font-size: 0.6em;
+    margin: 0;
   }
 }
 
@@ -363,7 +363,7 @@ footer {
 
 @media screen and (orientation: landscape) {
   footer {
-    font-size: 0.6em;
+    margin: 0;
   }
 }
 
@@ -825,7 +825,7 @@ footer {
 
 @media screen and (orientation: landscape) {
   footer {
-    font-size: 0.6em;
+    margin: 0;
   }
 }
 
