--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -201,6 +201,11 @@ margin-right: 0;
     @media (max-width: $bp-mobile - 1) {
 margin: 1rem;
     }
+
+    @media screen and (orientation: landscape) {
+        margin: 0 !important;
+        font-size: 0.7em !important;
+    }
 }
 
 
