--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -214,7 +214,7 @@ margin: 1rem;
     }
 
     @media (max-width: $bp-mini) {
-        font-size: 0.8em;
+        font-size: 0.8em !important;
     }
 }
 
