--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -15,12 +15,12 @@
         height: 200vh;
     }
 
-    @media (width: $bp-ipadpro) {
-        height: 120vh;
-    }
-
     @media screen and (orientation: landscape) {
         height: 550vh;
+    }
+
+    @media (width: $bp-ipadpro) and (orientation: landscape) {
+        height: 200vh;
     }
 
 }
