--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -14,21 +14,23 @@
         </div>
     </div>
 
+    <!-- BEGIN FORM -->
+
     <form id="edit-form" method="POST">
+
+            <!-- Begin Header jumbotron -->
 
         <div class="jumbotron profile-jumbo">
 
+            <!-- Header image -->
+
             <div class="row">
-
                 <div class="col-12 justify-content-center">
-                    <h3 class="profile-heading">
-                        <img class="profile-parts" src="/static/img/header.png" />
-
-                    </h3>
+                    <img class="profile-parts" alt="header-img" src="/static/img/header.png" />
                 </div>
                 <div class="col-12 col-md-6">
 
-
+                    <!-- Short Description field. -->
 
                     <label class="profile-label" for="profile-shortDesc">
                         Short Description
@@ -37,25 +39,22 @@
                         maxlength="200" value="{{username.shortDescription}}">
                 </div>
 
-
+                <!-- Image URL field. -->
 
                 <div class="col-12 col-md-6">
-
-
                     <label class="profile-label" for="profile-img">
                         Profile Image.
                     </label>
                     <small>Please enter the URL of your profile image</small>
                     <input id="profileImg" name="imgURL" class="form-control" type="text" maxlength="200"
                         value="{{username.imgURL}}">
-
                 </div>
             </div>
 
-
-
             <div class="form-group">
                 <div class="row">
+
+                    <!-- District dropdown. -->
 
                     <div class="col-12">
                         <label class="profile-label" for="profile-district">
@@ -64,6 +63,8 @@
                     </div>
 
                     <div class="col-12">
+
+                        <!-- District dropdown values. -->
 
                         <select class="form-control" name="district" id="profileSelect">
                             <option value="Mitte">Mitte</option>
@@ -78,35 +79,30 @@
                             <option value="Marzahn-Hellersdorf">Marzahn-Hellersdorf</option>
                             <option value="Lichtenberg">Lichtenberg</option>
                             <option value="Reinickendorf">Reinickendorf</option>
-
                         </select>
                     </div>
-
-
-
                 </div>
             </div>
 
+            <!-- End header jumbotron. -->
+
         </div>
+
+        <!-- Begin body jumbotron. -->
 
         <div class="jumbotron profile-jumbo">
             <div class="form-group">
 
-
+                <!-- Body image. -->
 
                 <div class="col-12 justify-content-center">
-
-                    <h3 class="profile-heading">
-                        <img class="profile-parts" src="/static/img/body.png" />
-
-                    </h3>
-
+                    <img class="profile-parts" alt="body-img" src="/static/img/body.png" />
                 </div>
 
-                <!-- MY SKILLS SECTION -->
+                <!-- My Skills section -->
 
                 <div class="col-12">
-                    <label class="profile-label" for="profile-skills">
+                    <label class="profile-label">
                         My skills
                     </label>
                 </div>
@@ -139,23 +135,19 @@
 
                     <div class="tab-content">
 
-
-
                         <!-- Begin "I'm proficient in..." Skills Tab -->
                         <div class="tab-pane container fade show active" id="skillsTab" role="tabpanel"
                             aria-labelledby="skills-tab">
 
                             {% for skill in skills %}
 
-
                             <div class="profile-skill-column">
                                 <div class="col-12">
 
                                     {% if skill not in username.skills %}
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}"
-                                            id="skill-box">
-                                        <label class="form-check-label" for="skill-box">
+                                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}">
+                                        <label class="form-check-label" for="{{skill}}">
                                             {{skill}}
                                         </label>
                                     </div>
@@ -164,114 +156,88 @@
                                     {% if skill in username.skills %}
 
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}"
-                                            id="skill-box" checked>
-                                        <label class="form-check-label" for="skill-box">
+                                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}" checked>
+                                        <label class="form-check-label" for="{{skill}}">
                                             {{skill}}
                                         </label>
                                     </div>
-
                                     {% endif %}
                                 </div>
-
                             </div>
-
-
                             {% endfor %}
-
-
                             <!-- End "I'm proficient in..." Skills Tab -->
                         </div>
 
 
                         <!-- Begin "Looking for..." desired skills tab -->
-
-
                         <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
                             aria-labelledby="desiredSkills-tab">
-
                             {% for skill in skills %}
                             <div class="profile-skill-column">
-
                                 <div class="col-12">
-
                                     {% if skill not in username.desiredSkills %}
-
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" name="desiredSkills"
-                                            value="{{skill}}" id="skill-box">
-                                        <label class="form-check-label" for="skill-box">
+                                            value="{{skill}}">
+                                        <label class="form-check-label" for="{{skill}}">
                                             {{skill}}
                                         </label>
                                     </div>
                                     {% endif %}
-
                                     {% if skill in username.desiredSkills %}
-
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" name="desiredSkills"
-                                            value="{{skill}}" id="skill-box" checked>
-                                        <label class="form-check-label" for="skill-box">
+                                            value="{{skill}}" checked>
+                                        <label class="form-check-label" for="{{skill}}">
                                             {{skill}}
                                         </label>
                                     </div>
                                     {% endif %}
-
                                 </div>
-
                             </div>
                             <!-- End "Looking for..." desired skills tab -->
                             {% endfor %}
                         </div>
 
-
                     </div>
-
                 </div>
             </div>
 
-            <!-- DESCRIPTION SECTION -->
+            <!-- Description Field -->
 
             <div class="row">
                 <div class="col-12">
-                <label class="profile-label" for="profile-description">
-                    Full Description
-                </label>
-                <input class="form-control" type="textarea" id="profile-description" name="description" rows="3"
-                    maxlength="500" rows="3" value="{{username.description}}"></input>
+                    <label class="profile-label" for="profile-description">
+                        Full Description
+                    </label>
+                    <input class="form-control" type="text" id="profile-description" name="description"
+                        maxlength="500" rows="3" value="{{username.description}}">
                 </div>
             </div>
-            <!-- COMMUNICATION STYLE SECTION -->
+
+            <!-- Communication style checkboxes -->
 
             <div class="row">
-
-
                 <div class="col-6">
                     <label class="profile-label" for="profile-commstyle">
                         Communication Style
                     </label>
-
-
                     {% for commstyle in commstyles %}
 
                     {% if commstyle not in username.communicationStyle %}
-
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="communicationStyle" value="{{commstyle}}"
-                            id="comm-box">
-                        <label class="form-check-label" for="comm-box">
+                        <input class="form-check-input" type="checkbox" name="communicationStyle" value="{{commstyle}}">
+                        <label class="form-check-label" for="{{commstyle}}">
                             {{commstyle}}
                         </label>
                     </div>
-
                     {% endif %}
 
                     {% if commstyle in username.communicationStyle %}
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="communicationStyle" value="{{commstyle}}"
-                            id="comm-box" checked>
-                        <label class="form-check-label" for="comm-box">
+                        <input class="form-check-input" type="checkbox" name="communicationStyle" value="{{commstyle}}" checked>
+                        <label class="form-check-label" for="{{commstyle}}">
                             {{commstyle}}
                         </label>
                     </div>
@@ -279,85 +245,74 @@
                     {% endfor %}
                 </div>
 
-
-
-
-                <!-- OTHER SECTION -->
+                <!-- Other Fields -->
 
                 <div class="col-6">
                     <label class="profile-label" for="profile-other">
                         Other
                     </label>
-
-
                     {% for other in other %}
 
                     {% if other not in username.otherDetails %}
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="other" value="{{other}}" id="other-box">
-                        <label class="form-check-label" for="other-box">
+                        <input class="form-check-input" type="checkbox" name="other" value="{{other}}">
+                        <label class="form-check-label" for="{{other}}">
                             {{other}}
                         </label>
                     </div>
-
                     {% endif %}
 
                     {% if other in username.otherDetails %}
-
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="other" value="{{other}}" id="other-box"
+                        <input class="form-check-input" type="checkbox" name="other" value="{{other}}"
                             checked>
-                        <label class="form-check-label" for="other-box">
+                        <label class="form-check-label" for="{{other}}">
                             {{other}}
                         </label>
                     </div>
                     {% endif %}
                     {% endfor %}
                 </div>
-
-
             </div>
+
+            <!-- End body jumbotron -->
+
         </div>
 
+        <!-- Begin footer jumbotron. -->
+
         <div class="jumbotron profile-jumbo">
-
-
             <div class="row">
 
-                <div class="col-12">
-                    <h3 class="profile-heading">
-                            <img class="profile-parts" src="/static/img/footer.png" />
+                <!-- Footer image. -->
 
-                    </h3>
+                <div class="col-12">
+                    <img class="profile-parts" alt="footer-img" src="/static/img/footer.png" />
                 </div>
 
                 <div class="col-12">
-
-
-
                     <label class="contact" for="profile-contact">
                         Github
                     </label>
                     <input id="github" class="form-control" type="text" name="github" maxlength="50"
                         value="{{username.github}}">{{username.github}}
                 </div>
-
             </div>
         </div>
 
         <div class="row justify-content-center">
 
+            <!-- Save Changes button. -->
+
             <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5 ml-0" name="btn"
                 value="save">Save
                 Changes</button>
         </div>
+
+        <!-- END FORM -->
+
     </form>
-
-
-
 </div>
-
-
 
 {% endblock %}
