--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -206,12 +206,12 @@
             <div class="col-12 d-flex justify-content-center">
 
                 <form id="pubdisc-form" method="POST">
-                    <button type="submit" class="btn btn-primary btn-large userarea-btn" name="btn"
+                    <button type="submit" class="btn btn-primary btn-large userarea-btn mt-1" name="btn"
                         value="publish">Publish
                         on
                         tanDev</button>
 
-                    <button type="submit" class="btn btn-primary btn-large userarea-btn" name="btn"
+                    <button type="submit" class="btn btn-primary btn-large userarea-btn mt-1" name="btn"
                         value="discard">Discard
                         changes</button>
                 </form>
