--- a/templates/pages/settings.html
+++ b/templates/pages/settings.html
@@ -53,7 +53,7 @@
 
                         <div class="col-12 d-flex justify-content-center">
 
-                            <button type="submit" class="btn btn-primary btn-large userarea-btn my-auto" name="btn"
+                            <button type="submit" class="btn btn-primary btn-large userarea-btn my-auto mt-1" name="btn"
                                 value="save">Save Changes</button>
 
                         </div>
@@ -61,9 +61,9 @@
 
                         {% if edit != True %}
 
-                        <div class="col-12 justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
 
-                            <button type="submit" class="btn btn-primary btn-large userarea-btn my-auto" name="btn"
+                            <button type="submit" class="btn btn-primary btn-large userarea-btn my-auto mt-1" name="btn"
                                 value="edit">Edit Settings</button>
 
                             <button type="button" class="btn btn-danger btn-large my-auto" name="btn"
