Tweak search.html wrapper height for desktop.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1090,6 +1090,12 @@ ul {
   }
 }
 
+@media (min-width: 1200px) {
+  .wrapper {
+    height: 240vh;
+  }
+}
+
 #sidebar {
   background: #2581B0;
   color: #fff;
