--- a/templates/pages/logreg.html
+++ b/templates/pages/logreg.html
@@ -126,7 +126,7 @@
     </div>
 </div>
 
-<!-- JavaScript code to display the encrypted password. -->
+<!-- Function that shows and hides the password upon clicking the checkbox. -->
 
 <script>
     function showPW() {
