--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -17,14 +17,15 @@
     <!-- Load favicon -->
     <link rel="icon" type="image/vnd.microsoft.icon" href="/static/img/favicon.ico">
 
-    <!-- Load stylesheets -->
+    <!-- Load CDN stylesheets -->
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Roboto|Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Roboto|Share+Tech+Mono&display=swap"
+        rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -32,7 +33,6 @@
 
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
-
 
 
     <!-- Font Awesome JS -->
@@ -43,7 +43,7 @@
         integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous">
     </script>
 
-
+    <!-- Load local stylesheets. -->
 
     <link rel="stylesheet" type="text/css"
         href="{{url_for('static', filename='css/awesome-bootstrap-checkbox.css')}}" />
@@ -65,27 +65,29 @@
 
     {% include 'layouts/footer.html' %}
 
-    <!-- Scripts -->
+    <!-- Load CDN Scripts -->
+
+    <!-- Load jQuery -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
-        <script type=“text/javascript” src=“https://cdnjs.cloudflare.com/ajax/libs/hideshowpassword/2.0.8/hideShowPassword.min.js”></script>
+    <script type=“text/javascript”
+        src=“https://cdnjs.cloudflare.com/ajax/libs/hideshowpassword/2.0.8/hideShowPassword.min.js”> </script> <script
+        src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <!-- Popper.JS -->
+    <!-- Load Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
         integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous">
     </script>
 
-    <!-- Bootstrap JS -->
+    <!-- Load Bootstrap JS -->
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
 
+    <!-- Load local Scripts. -->
 
     <!-- Special navbar behavior, with two distinct styles for desktop and mobile. Applicable for index and about pages. -->
 
@@ -94,7 +96,6 @@
     <script src="{{url_for('static', filename='js/index.js')}}"></script>
 
     {% endif %}
-
 
     <!-- Conditional CSS and JS for about page. -->
 
@@ -107,8 +108,6 @@
     </style>
 
     <script src="{{url_for('static', filename='js/about.js')}}"></script>
-
-
 
 
     <!-- Alternative navbar styling for pages other than index and about.-->
@@ -142,18 +141,21 @@
     <script src="{{url_for('static', filename='js/logreg.js')}}"></script>
     {% endif %}
 
+    <!-- Conditional JS for profile pages. -->
+
     {% if active == 'myprofile' or active == 'profile' %}
 
     <script src="{{url_for('static', filename='js/userarea.js')}}"></script>
 
     {% endif %}
 
+    <!-- Conditional JS for User Details page. -->
+
     {% if active == "user_details" %}
 
     <script src="{{url_for('static', filename='js/user_details.js')}}"></script>
 
     {% endif %}
-
 
 </body>
 
