--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,8 +1,11 @@
 {% block footer %}
-<!-- column sizes in footer different on activities page because of filters bar on right making the width of the footer smaller -->
+
+<!-- BEGIN FOOTER -->
+
 <footer>
     <div class="container-fluid footer">
-        <!--- Copyright -->
+
+        <!--- Contact -->
 
         <div class="footer-content">
             <div class="row footer-row mt-0 ">
@@ -18,19 +21,19 @@
                     <a href="https://github.com/synnea" target="_blank"><i class="fab fa-github github-logo hvr-bounce-in"></i></a>
                 </div>
 
-                <!--- Link to data source from Kaggle -->
-
+                <!--- Disclaimer -->
 
                 <div class="col-4 d-none d-md-block footer-col">
                     <div>For educational purposes only.</div>
                 </div>
             </div>
 
+            <!-- Copyright -->
+
             <div class="row copyright justify-content-center">
                 <div class="col-12">
                     <div>&copy;2019 Carina Poell</div>
                 </div>
-
             </div>
         </div>
     </div>
