--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -11,6 +11,8 @@
         <a class="navLogo hvr-bounce-in" href="{{url_for('index')}}"><img
                 src="/static/img/logos/tandev_v1_brightlightblue.svg" class="img-fluid navLogo" alt="logo"></a>
 
+        <!-- If the current page is the search page and the screen width is smaller than sm, show the 'Toggle Filters' button.
+        Show the 'Clear Filters' button if the active page is 'search', regardless of screen width. -->
 
         {% if active == 'search' %}
 
@@ -18,13 +20,14 @@
             <i class="fas fa-align-left"></i>
             <span>Toggle Filters</span>
         </button>
-        <form action="" method="POST">
-            <button type="submit" id="clear-btn" class="btn btn-info" name="btn"
-                value="clear"><i class="fas fa-redo-alt"></i> Clear Filters</button>
+        <form method="POST">
+            <button type="submit" id="clear-btn" class="btn btn-info" name="btn" value="clear"><i
+                    class="fas fa-redo-alt"></i> Clear Filters</button>
         </form>
 
-
         {% endif %}
+
+        <!-- Dropdown menu for iPad and smaller screen sizes. -->
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,12 +36,9 @@
 
         <!-- Dropdown Button -->
 
-
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
 
             <!-- Navbar Menu Items -->
-
-
 
             <ul class="navbar-nav ml-auto nav-fill w-50">
 
@@ -53,7 +53,6 @@
 
                 <!-- If the user is logged in, they see the "Login/Register" navbar item.
                 If they are not logged in, they see "My Account", with additional dropdown items. -->
-
 
                 {% if loggedIn != True %}
                 <li class="nav-item main-nav-item" id="navLogReg">
@@ -79,7 +78,6 @@
                             Logout</a>
                     </div>
                 </li>
-
                 {% endif %}
             </ul>
         </div>
